@@ -1,3 +1,12 @@
+2014-05-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-mime-inline-part, gnus-mm-display-part):
+	Work for the last MIME part in an article.
+	(gnus-mime-display-single): Suppress excessive newlines between parts.
+
+	* mm-uu.el (mm-uu-dissect): Assume that separators may be accompanied
+	by leading or trailing newline.
+
 2014-05-12  Sam Steingold  <sds@gnu.org>
 
 	* time-date.el (seconds-to-string): New function to pretty print time
